{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Move",
            "id": "50d80716-7d88-45ac-9013-ed69642804f0",
            "actions": [
                {
                    "name": "MoveVertical",
                    "type": "PassThrough",
                    "id": "7383f7f0-a6d3-405f-a47d-d6b637cde07a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveHorizontal",
                    "type": "PassThrough",
                    "id": "aaccd643-f994-484c-948b-f114e1b303ce",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "7677250e-05f4-4bd9-808e-ff3d0062eada",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "3e2c493d-aad5-4a8a-b996-da9ed9d5b2ad",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e23fd4c5-f94f-4ddf-90ba-1897ab3d1df6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7e921409-c2c4-494e-b90a-6d9d729c6a6b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "1851157d-bdcb-414d-9426-eefe88049dec",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d8a7f2ea-ea1b-4432-85bb-b4608d3aa59c",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d1645c35-dff0-41e0-9182-317b70477418",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "668e071e-bc02-4906-8d00-bac64c0d31a5",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7426a6c0-84fd-441f-8bfc-251aeca11b6c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ba1b1fa6-eb52-4dca-99c2-364e818a1675",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "262847fc-098e-4f74-8d6d-7c5300e5d56c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7f1b5bb8-f943-4975-a9d1-4f23b749447a",
                    "path": "<Joystick>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3ba14fab-28cd-46e7-8796-b278871cdfdf",
                    "path": "<Joystick>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6140d874-ffda-4fe6-9713-7a719fab1ad0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aac5be01-a95f-44d2-8e97-0f9a25e05b45",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Attack",
            "id": "5f9fd364-29ff-4378-a518-ac570f126faa",
            "actions": [
                {
                    "name": "Finished",
                    "type": "Button",
                    "id": "63e526a2-16d3-4903-8041-e2fb9e8ae899",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shot",
                    "type": "Button",
                    "id": "c53b77c7-2825-40e7-8d22-feb83e466e11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackDirection",
                    "type": "Value",
                    "id": "bd83e2bd-6e88-40b0-b508-1dbb0b46e78d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0474a216-9c96-425d-9362-dba9f5be797a",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Finished",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59c61d0f-af30-48e4-9ea7-f92436b57838",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Shot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1bac4b8a-59c6-4809-9cec-d874f1782d63",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "AttackDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78990acc-71e9-450f-ac35-ecad82570d3f",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "AttackDirection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interaction",
            "id": "d015e305-83b6-40db-967d-e2fd977c5c7b",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "99526140-9ab2-4a13-8335-5f2383d1fdcb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cba519f3-c18d-48f5-9215-482bff5a0d35",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5d1945f6-5f71-444e-98c6-0469ef430bb6",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Pause",
            "id": "81686f9e-1f49-42bc-a872-904b93b1f19e",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "f86fae73-ccc3-4b9e-9f99-b31eac011b9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0b7c04b0-f83c-450f-a9ec-14504ce6ebdd",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "898cf65c-d5ec-497b-94cb-24e27ade2ae4",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}